Add new DTOs for transport tracking and enhance WebSocket configuration; implement ConfirmarDescargaDto, ConfirmarCarguioDto, ConfirmarLlegadaMinaDto, and TransicionEstadoBaseDto for managing transport transitions; update GeometryUtils for distance calculations and geofencing; refactor TrackingBl to utilize new utility methods and improve tracking metrics handling.