@@ -9,16 +9,13 @@ import ucb.edu.bo.sumajflow.dto.tracking.*;
 import ucb.edu.bo.sumajflow.entity.*;
 import ucb.edu.bo.sumajflow.repository.*;
 import ucb.edu.bo.sumajflow.repository.mongodb.TrackingUbicacionRepository;
+import ucb.edu.bo.sumajflow.utils.GeometryUtils;
 
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
 
-/**
- * Servicio principal de tracking GPS
- * Maneja la lógica de ubicaciones, geofencing y sincronización
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -28,41 +25,35 @@ public class TrackingBl {
     private final AsignacionCamionRepository asignacionCamionRepository;
     private final LotesRepository lotesRepository;
     private final PersonaRepository personaRepository;
-    private final GeoUtilsService geoUtils;
 
-    // Umbral de tiempo para considerar offline (5 minutos)
     private static final long OFFLINE_THRESHOLD_MINUTES = 5;
 
-    // ==================== INICIAR TRACKING ====================
+    // Radios de geofencing en metros
+    private static final int RADIO_MINA = 100;
+    private static final int RADIO_BALANZA_COOPERATIVA = 50;
+    private static final int RADIO_BALANZA_DESTINO = 50;
+    private static final int RADIO_ALMACEN = 100;
 
-    /**
-     * Inicia el tracking para una asignación de camión
-     */
     @Transactional
     public TrackingResponseDto iniciarTracking(Integer asignacionCamionId, Double latInicial, Double lngInicial) {
         log.info("Iniciando tracking para asignación ID: {}", asignacionCamionId);
 
-        // Validar que la asignación existe
         AsignacionCamion asignacion = asignacionCamionRepository.findById(asignacionCamionId)
                 .orElseThrow(() -> new IllegalArgumentException("Asignación de camión no encontrada"));
 
-        // Verificar que no exista ya un tracking
         if (trackingRepository.existsByAsignacionCamionId(asignacionCamionId)) {
             log.warn("Ya existe tracking para la asignación ID: {}", asignacionCamionId);
             return getTrackingByAsignacion(asignacionCamionId);
         }
 
-        // Obtener información relacionada
         Lotes lote = asignacion.getLotesId();
         Transportista transportista = asignacion.getTransportistaId();
         Persona persona = personaRepository.findByUsuariosId(transportista.getUsuariosId()).orElse(null);
 
-        // Construir puntos de control según la ruta
         List<TrackingUbicacion.PuntoControl> puntosControl = construirPuntosControl(lote, asignacion);
 
-        // Crear ubicación inicial si se proporcionó
         TrackingUbicacion.UbicacionActual ubicacionActual = null;
-        if (latInicial != null && lngInicial != null && geoUtils.esUbicacionValida(latInicial, lngInicial)) {
+        if (lngInicial != null && GeometryUtils.esUbicacionValida(latInicial, lngInicial)) {
             ubicacionActual = TrackingUbicacion.UbicacionActual.builder()
                     .lat(latInicial)
                     .lng(lngInicial)
@@ -72,7 +63,6 @@ public class TrackingBl {
                     .build();
         }
 
-        // Crear documento de tracking
         TrackingUbicacion tracking = TrackingUbicacion.builder()
                 .asignacionCamionId(asignacionCamionId)
                 .loteId(lote.getId())
@@ -87,7 +77,14 @@ public class TrackingBl {
                 .puntosControl(puntosControl)
                 .metricas(TrackingUbicacion.MetricasViaje.builder()
                         .inicioViaje(LocalDateTime.now())
+                        .distanciaRecorrida(0.0)
+                        .tiempoEnMovimiento(0L)
+                        .tiempoDetenido(0L)
+                        .velocidadPromedio(0.0)
+                        .velocidadMaxima(0.0)
                         .build())
+                .historialUbicaciones(new ArrayList<>())
+                .ubicacionesPendientesSincronizar(new ArrayList<>())
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
@@ -98,22 +95,15 @@ public class TrackingBl {
         return convertToResponseDto(tracking);
     }
 
-    // ==================== ACTUALIZAR UBICACIÓN ====================
-
-    /**
-     * Actualiza la ubicación actual de un camión
-     */
     @Transactional
     public ActualizacionUbicacionResponseDto actualizarUbicacion(ActualizarUbicacionDto dto) {
         log.debug("Actualizando ubicación - Asignación ID: {}, Lat: {}, Lng: {}",
                 dto.getAsignacionCamionId(), dto.getLat(), dto.getLng());
 
-        // Validar ubicación
-        if (!geoUtils.esUbicacionValida(dto.getLat(), dto.getLng())) {
+        if (!GeometryUtils.esUbicacionValida(dto.getLat(), dto.getLng())) {
             throw new IllegalArgumentException("Ubicación inválida");
         }
 
-        // Obtener tracking existente o crear uno nuevo
         TrackingUbicacion tracking = trackingRepository.findByAsignacionCamionId(dto.getAsignacionCamionId())
                 .orElseGet(() -> {
                     log.info("Tracking no encontrado, creando nuevo...");
@@ -123,7 +113,6 @@ public class TrackingBl {
                             .orElseThrow(() -> new IllegalStateException("Error al crear tracking"));
                 });
 
-        // Guardar ubicación anterior en historial
         if (tracking.getUbicacionActual() != null) {
             TrackingUbicacion.PuntoUbicacion puntoHistorial = TrackingUbicacion.PuntoUbicacion.builder()
                     .lat(tracking.getUbicacionActual().getLat())
@@ -138,16 +127,13 @@ public class TrackingBl {
 
             tracking.getHistorialUbicaciones().add(puntoHistorial);
 
-            // Actualizar métricas
             actualizarMetricas(tracking, dto);
         }
 
-        // Determinar timestamp
         LocalDateTime timestamp = dto.getTimestampCaptura() != null
                 ? dto.getTimestampCaptura()
                 : LocalDateTime.now();
 
-        // Actualizar ubicación actual
         TrackingUbicacion.UbicacionActual nuevaUbicacion = TrackingUbicacion.UbicacionActual.builder()
                 .lat(dto.getLat())
                 .lng(dto.getLng())
@@ -164,13 +150,10 @@ public class TrackingBl {
         tracking.setUltimaSincronizacion(LocalDateTime.now());
         tracking.setUpdatedAt(LocalDateTime.now());
 
-        // Verificar geofencing
         GeofencingStatusDto geofencingStatus = verificarGeofencing(tracking, dto.getLat(), dto.getLng());
 
-        // Guardar
         trackingRepository.save(tracking);
 
-        // Construir respuesta
         return ActualizacionUbicacionResponseDto.builder()
                 .success(true)
                 .mensaje("Ubicación actualizada correctamente")
@@ -187,11 +170,6 @@ public class TrackingBl {
                 .build();
     }
 
-    // ==================== SINCRONIZACIÓN OFFLINE ====================
-
-    /**
-     * Sincroniza ubicaciones capturadas offline
-     */
     @Transactional
     public SincronizacionResponseDto sincronizarUbicacionesOffline(
             Integer asignacionCamionId,
@@ -207,12 +185,11 @@ public class TrackingBl {
         int fallidas = 0;
         List<String> errores = new ArrayList<>();
 
-        // Ordenar por timestamp
         ubicaciones.sort(Comparator.comparing(UbicacionOfflineDto::getTimestamp));
 
         for (UbicacionOfflineDto ubicacion : ubicaciones) {
             try {
-                if (!geoUtils.esUbicacionValida(ubicacion.getLat(), ubicacion.getLng())) {
+                if (!GeometryUtils.esUbicacionValida(ubicacion.getLat(), ubicacion.getLng())) {
                     errores.add("Ubicación inválida: " + ubicacion.getTimestamp());
                     fallidas++;
                     continue;
@@ -238,9 +215,8 @@ public class TrackingBl {
             }
         }
 
-        // Actualizar última ubicación si hay datos
         if (!ubicaciones.isEmpty()) {
-            UbicacionOfflineDto ultima = ubicaciones.get(ubicaciones.size() - 1);
+            UbicacionOfflineDto ultima = ubicaciones.getLast();
             tracking.setUbicacionActual(TrackingUbicacion.UbicacionActual.builder()
                     .lat(ultima.getLat())
                     .lng(ultima.getLng())
@@ -252,7 +228,6 @@ public class TrackingBl {
                     .altitud(ultima.getAltitud())
                     .build());
 
-            // Recalcular métricas
             recalcularMetricas(tracking);
         }
 
@@ -274,11 +249,6 @@ public class TrackingBl {
                 .build();
     }
 
-    // ==================== GEOFENCING ====================
-
-    /**
-     * Verifica el estado de geofencing para una ubicación
-     */
     public GeofencingStatusDto verificarGeofencing(TrackingUbicacion tracking, double lat, double lng) {
         GeofencingStatusDto.GeofencingStatusDtoBuilder builder = GeofencingStatusDto.builder()
                 .dentroDeZona(false)
@@ -289,9 +259,8 @@ public class TrackingBl {
             return builder.build();
         }
 
-        // Buscar si está dentro de alguna zona
         for (TrackingUbicacion.PuntoControl punto : tracking.getPuntosControl()) {
-            double distancia = geoUtils.calcularDistanciaMetros(lat, lng, punto.getLat(), punto.getLng());
+            double distancia = GeometryUtils.calcularDistanciaMetros(lat, lng, punto.getLat(), punto.getLng());
 
             if (distancia <= punto.getRadio()) {
                 builder.dentroDeZona(true)
@@ -299,20 +268,18 @@ public class TrackingBl {
                         .zonaTipo(punto.getTipo())
                         .distanciaAZona(distancia);
 
-                // Determinar acciones posibles
                 if ("pendiente".equals(punto.getEstado()) || punto.getLlegada() == null) {
                     builder.puedeRegistrarLlegada(true);
-                } else if (punto.getLlegada() != null && punto.getSalida() == null) {
+                } else if (punto.getSalida() == null) {
                     builder.puedeRegistrarSalida(true);
                 }
                 break;
             }
         }
 
-        // Encontrar próximo punto pendiente
-        TrackingUbicacion.PuntoControl proximoPunto = geoUtils.encontrarProximoPuntoControlPendiente(tracking.getPuntosControl());
+        TrackingUbicacion.PuntoControl proximoPunto = GeometryUtils.encontrarProximoPuntoControlPendiente(tracking.getPuntosControl());
         if (proximoPunto != null) {
-            double distanciaProximo = geoUtils.calcularDistanciaMetros(lat, lng, proximoPunto.getLat(), proximoPunto.getLng());
+            double distanciaProximo = GeometryUtils.calcularDistanciaMetros(lat, lng, proximoPunto.getLat(), proximoPunto.getLng());
             builder.proximoPuntoControl(proximoPunto.getNombre())
                     .distanciaProximoPunto(distanciaProximo);
         }
@@ -320,9 +287,6 @@ public class TrackingBl {
         return builder.build();
     }
 
-    /**
-     * Registra llegada a un punto de control
-     */
     @Transactional
     public TrackingResponseDto registrarLlegadaPuntoControl(
             Integer asignacionCamionId,
@@ -336,23 +300,20 @@ public class TrackingBl {
         TrackingUbicacion tracking = trackingRepository.findByAsignacionCamionId(asignacionCamionId)
                 .orElseThrow(() -> new IllegalArgumentException("Tracking no encontrado"));
 
-        // Buscar el punto de control
         TrackingUbicacion.PuntoControl punto = tracking.getPuntosControl().stream()
                 .filter(p -> p.getTipo().equals(tipoPunto))
                 .findFirst()
                 .orElseThrow(() -> new IllegalArgumentException("Punto de control no encontrado: " + tipoPunto));
 
-        // Validar que está cerca del punto (si se proporciona ubicación)
         if (lat != null && lng != null) {
-            double distancia = geoUtils.calcularDistanciaMetros(lat, lng, punto.getLat(), punto.getLng());
-            if (distancia > punto.getRadio() * 1.5) { // 50% de tolerancia extra
+            double distancia = GeometryUtils.calcularDistanciaMetros(lat, lng, punto.getLat(), punto.getLng());
+            if (distancia > punto.getRadio() * 1.5) {
                 throw new IllegalArgumentException(
                         "Estás demasiado lejos del punto de control (" + (int) distancia + "m). " +
                                 "Debes estar a menos de " + punto.getRadio() + "m");
             }
         }
 
-        // Registrar llegada
         punto.setLlegada(LocalDateTime.now());
         punto.setEstado("en_punto");
 
@@ -364,9 +325,6 @@ public class TrackingBl {
         return convertToResponseDto(tracking);
     }
 
-    /**
-     * Registra salida de un punto de control
-     */
     @Transactional
     public TrackingResponseDto registrarSalidaPuntoControl(
             Integer asignacionCamionId,
@@ -378,18 +336,15 @@ public class TrackingBl {
         TrackingUbicacion tracking = trackingRepository.findByAsignacionCamionId(asignacionCamionId)
                 .orElseThrow(() -> new IllegalArgumentException("Tracking no encontrado"));
 
-        // Buscar el punto de control
         TrackingUbicacion.PuntoControl punto = tracking.getPuntosControl().stream()
                 .filter(p -> p.getTipo().equals(tipoPunto))
                 .findFirst()
                 .orElseThrow(() -> new IllegalArgumentException("Punto de control no encontrado: " + tipoPunto));
 
-        // Validar que ya registró llegada
         if (punto.getLlegada() == null) {
             throw new IllegalArgumentException("Debe registrar llegada antes de la salida");
         }
 
-        // Registrar salida
         punto.setSalida(LocalDateTime.now());
         punto.setEstado("completado");
 
@@ -401,25 +356,16 @@ public class TrackingBl {
         return convertToResponseDto(tracking);
     }
 
-    // ==================== CONSULTAS ====================
-
-    /**
-     * Obtiene el tracking de una asignación
-     */
     @Transactional(readOnly = true)
     public TrackingResponseDto getTrackingByAsignacion(Integer asignacionCamionId) {
         TrackingUbicacion tracking = trackingRepository.findByAsignacionCamionId(asignacionCamionId)
                 .orElseThrow(() -> new IllegalArgumentException("Tracking no encontrado para esta asignación"));
 
-        // Verificar estado de conexión
         actualizarEstadoConexion(tracking);
 
         return convertToResponseDto(tracking);
     }
 
-    /**
-     * Obtiene todos los trackings activos de un lote
-     */
     @Transactional(readOnly = true)
     public MonitoreoLoteDto getMonitoreoLote(Integer loteId) {
         log.debug("Obteniendo monitoreo para lote ID: {}", loteId);
@@ -429,17 +375,15 @@ public class TrackingBl {
 
         List<TrackingUbicacion> trackings = trackingRepository.findByLoteId(loteId);
 
-        // Convertir a DTOs de camiones
         List<CamionEnRutaDto> camiones = trackings.stream()
                 .map(this::convertToCamionEnRutaDto)
                 .collect(Collectors.toList());
 
-        // Estadísticas
         long enRuta = camiones.stream()
-                .filter(c -> !"completado".equals(c.getEstadoViaje()) && !"cancelado".equals(c.getEstadoViaje()))
+                .filter(c -> !"Completado".equals(c.getEstadoViaje()) && !"Cancelado por rechazo".equals(c.getEstadoViaje()))
                 .count();
         long completados = camiones.stream()
-                .filter(c -> "Viaje terminado".equals(c.getEstadoViaje()))
+                .filter(c -> "Completado".equals(c.getEstadoViaje()))
                 .count();
 
         return MonitoreoLoteDto.builder()
@@ -453,9 +397,6 @@ public class TrackingBl {
                 .build();
     }
 
-    /**
-     * Obtiene el historial de ubicaciones de una asignación
-     */
     @Transactional(readOnly = true)
     public HistorialUbicacionesDto getHistorialUbicaciones(Integer asignacionCamionId) {
         TrackingUbicacion tracking = trackingRepository.findByAsignacionCamionId(asignacionCamionId)
@@ -473,7 +414,6 @@ public class TrackingBl {
                         .build())
                 .collect(Collectors.toList());
 
-        // Agregar ubicación actual al final
         if (tracking.getUbicacionActual() != null) {
             ubicaciones.add(UbicacionDto.builder()
                     .lat(tracking.getUbicacionActual().getLat())
@@ -491,105 +431,104 @@ public class TrackingBl {
                 .build();
     }
 
-    // ==================== MÉTODOS AUXILIARES PRIVADOS ====================
-
-    /**
-     * Construye los puntos de control según el tipo de operación del lote
-     */
     private List<TrackingUbicacion.PuntoControl> construirPuntosControl(Lotes lote, AsignacionCamion asignacion) {
         List<TrackingUbicacion.PuntoControl> puntos = new ArrayList<>();
         int orden = 1;
 
-        // 1. Mina (origen)
         Minas mina = lote.getMinasId();
         puntos.add(TrackingUbicacion.PuntoControl.builder()
                 .tipo("mina")
                 .nombre(mina.getNombre())
                 .lat(mina.getLatitud().doubleValue())
                 .lng(mina.getLongitud().doubleValue())
-                .radio(100) // 100 metros de radio
+                .radio(RADIO_MINA)
                 .orden(orden++)
                 .requerido(true)
                 .estado("pendiente")
                 .build());
 
-        // 2. Balanza cooperativa
-        // TODO: Obtener la balanza de la cooperativa del socio
         Sectores sector = mina.getSectoresId();
         Cooperativa cooperativa = sector.getCooperativaId();
-        // Por ahora usamos coordenadas de la cooperativa
-        if (cooperativa.getLatitud() != null && cooperativa.getLongitud() != null) {
+        if (!cooperativa.getBalanzaCooperativaList().isEmpty()) {
+            var balanza = cooperativa.getBalanzaCooperativaList().getFirst();
             puntos.add(TrackingUbicacion.PuntoControl.builder()
                     .tipo("balanza_cooperativa")
                     .nombre("Balanza " + cooperativa.getRazonSocial())
-                    .lat(cooperativa.getLatitud().doubleValue())
-                    .lng(cooperativa.getLongitud().doubleValue())
-                    .radio(50)
+                    .lat(balanza.getLatitud().doubleValue())
+                    .lng(balanza.getLongitud().doubleValue())
+                    .radio(RADIO_BALANZA_COOPERATIVA)
                     .orden(orden++)
                     .requerido(true)
                     .estado("pendiente")
                     .build());
         }
 
-        // 3. Balanza y almacén destino (según tipo de operación)
-        String tipoOperacion = lote.getTipoOperacion();
+        if (!lote.getLoteIngenioList().isEmpty()) {
+            IngenioMinero ingenio = lote.getLoteIngenioList().getFirst().getIngenioMineroId();
 
-        if ("procesamiento_planta".equals(tipoOperacion)) {
-            // Destino: Ingenio
-            // TODO: Obtener ingenio del lote_ingenio
-            puntos.add(TrackingUbicacion.PuntoControl.builder()
-                    .tipo("balanza_ingenio")
-                    .nombre("Balanza Ingenio")
-                    .lat(-19.5750) // Placeholder - obtener de la BD
-                    .lng(-65.7400)
-                    .radio(50)
-                    .orden(orden++)
-                    .requerido(true)
-                    .estado("pendiente")
-                    .build());
+            if (!ingenio.getBalanzasIngenioList().isEmpty()) {
+                var balanza = ingenio.getBalanzasIngenioList().getFirst();
+                puntos.add(TrackingUbicacion.PuntoControl.builder()
+                        .tipo("balanza_ingenio")
+                        .nombre("Balanza " + ingenio.getRazonSocial())
+                        .lat(balanza.getLatitud().doubleValue())
+                        .lng(balanza.getLongitud().doubleValue())
+                        .radio(RADIO_BALANZA_DESTINO)
+                        .orden(orden++)
+                        .requerido(true)
+                        .estado("pendiente")
+                        .build());
+            }
 
-            puntos.add(TrackingUbicacion.PuntoControl.builder()
-                    .tipo("almacen_ingenio")
-                    .nombre("Almacén Ingenio")
-                    .lat(-19.5750)
-                    .lng(-65.7400)
-                    .radio(100)
-                    .orden(orden++)
-                    .requerido(true)
-                    .estado("pendiente")
-                    .build());
+            if (!ingenio.getAlmacenesIngenioList().isEmpty()) {
+                var almacen = ingenio.getAlmacenesIngenioList().getFirst();
+                puntos.add(TrackingUbicacion.PuntoControl.builder()
+                        .tipo("almacen_ingenio")
+                        .nombre("Almacén " + ingenio.getRazonSocial())
+                        .lat(almacen.getLatitud().doubleValue())
+                        .lng(almacen.getLongitud().doubleValue())
+                        .radio(RADIO_ALMACEN)
+                        .orden(orden++)
+                        .requerido(true)
+                        .estado("pendiente")
+                        .build());
+            }
 
-        } else if ("venta_directa".equals(tipoOperacion)) {
-            // Destino: Comercializadora
-            puntos.add(TrackingUbicacion.PuntoControl.builder()
-                    .tipo("balanza_comercializadora")
-                    .nombre("Balanza Comercializadora")
-                    .lat(-19.5700)
-                    .lng(-65.7350)
-                    .radio(50)
-                    .orden(orden++)
-                    .requerido(true)
-                    .estado("pendiente")
-                    .build());
+        } else if (!lote.getLoteComercializadoraList().isEmpty()) {
+            Comercializadora comercializadora = lote.getLoteComercializadoraList().getFirst().getComercializadoraId();
 
-            puntos.add(TrackingUbicacion.PuntoControl.builder()
-                    .tipo("almacen_comercializadora")
-                    .nombre("Almacén Comercializadora")
-                    .lat(-19.5700)
-                    .lng(-65.7350)
-                    .radio(100)
-                    .orden(orden++)
-                    .requerido(true)
-                    .estado("pendiente")
-                    .build());
+            if (!comercializadora.getBalanzasList().isEmpty()) {
+                var balanza = comercializadora.getBalanzasList().getFirst();
+                puntos.add(TrackingUbicacion.PuntoControl.builder()
+                        .tipo("balanza_comercializadora")
+                        .nombre("Balanza " + comercializadora.getRazonSocial())
+                        .lat(balanza.getLatitud().doubleValue())
+                        .lng(balanza.getLongitud().doubleValue())
+                        .radio(RADIO_BALANZA_DESTINO)
+                        .orden(orden++)
+                        .requerido(true)
+                        .estado("pendiente")
+                        .build());
+            }
+
+            if (!comercializadora.getAlmacenesList().isEmpty()) {
+                var almacen = comercializadora.getAlmacenesList().getFirst();
+                puntos.add(TrackingUbicacion.PuntoControl.builder()
+                        .tipo("almacen_comercializadora")
+                        .nombre("Almacén " + comercializadora.getRazonSocial())
+                        .lat(almacen.getLatitud().doubleValue())
+                        .lng(almacen.getLongitud().doubleValue())
+                        .radio(RADIO_ALMACEN)
+                        .orden(orden++)
+                        .requerido(true)
+                        .estado("pendiente")
+                        .build());
+            }
         }
 
         return puntos;
     }
 
-    /**
-     * Actualiza las métricas del viaje con una nueva ubicación
-     */
     private void actualizarMetricas(TrackingUbicacion tracking, ActualizarUbicacionDto dto) {
         TrackingUbicacion.MetricasViaje metricas = tracking.getMetricas();
         TrackingUbicacion.UbicacionActual ubicacionAnterior = tracking.getUbicacionActual();
@@ -598,33 +537,28 @@ public class TrackingBl {
             return;
         }
 
-        // Calcular distancia desde última ubicación
-        double distancia = geoUtils.calcularDistancia(
+        double distancia = GeometryUtils.calcularDistancia(
                 ubicacionAnterior.getLat(), ubicacionAnterior.getLng(),
                 dto.getLat(), dto.getLng());
 
         metricas.setDistanciaRecorrida(metricas.getDistanciaRecorrida() + distancia);
 
-        // Calcular tiempo transcurrido
         if (ubicacionAnterior.getTimestamp() != null) {
             long segundosTranscurridos = ChronoUnit.SECONDS.between(
                     ubicacionAnterior.getTimestamp(),
                     dto.getTimestampCaptura() != null ? dto.getTimestampCaptura() : LocalDateTime.now());
 
-            // Determinar si estaba en movimiento o detenido
-            if (dto.getVelocidad() != null && dto.getVelocidad() > 1.0) { // > 1 km/h = en movimiento
+            if (dto.getVelocidad() != null && dto.getVelocidad() > 1.0) {
                 metricas.setTiempoEnMovimiento(metricas.getTiempoEnMovimiento() + segundosTranscurridos);
             } else {
                 metricas.setTiempoDetenido(metricas.getTiempoDetenido() + segundosTranscurridos);
             }
         }
 
-        // Actualizar velocidad máxima
         if (dto.getVelocidad() != null && dto.getVelocidad() > metricas.getVelocidadMaxima()) {
             metricas.setVelocidadMaxima(dto.getVelocidad());
         }
 
-        // Calcular velocidad promedio
         long tiempoTotal = metricas.getTiempoEnMovimiento();
         if (tiempoTotal > 0) {
             double velocidadPromedio = (metricas.getDistanciaRecorrida() / tiempoTotal) * 3600;
@@ -632,16 +566,12 @@ public class TrackingBl {
         }
     }
 
-    /**
-     * Recalcula las métricas del viaje completo (después de sincronización offline)
-     */
     private void recalcularMetricas(TrackingUbicacion tracking) {
         List<TrackingUbicacion.PuntoUbicacion> historial = tracking.getHistorialUbicaciones();
         if (historial.isEmpty()) {
             return;
         }
 
-        // Ordenar por timestamp
         historial.sort(Comparator.comparing(TrackingUbicacion.PuntoUbicacion::getTimestamp));
 
         double distanciaTotal = 0;
@@ -653,13 +583,11 @@ public class TrackingBl {
             TrackingUbicacion.PuntoUbicacion anterior = historial.get(i - 1);
             TrackingUbicacion.PuntoUbicacion actual = historial.get(i);
 
-            // Distancia
-            double distancia = geoUtils.calcularDistancia(
+            double distancia = GeometryUtils.calcularDistancia(
                     anterior.getLat(), anterior.getLng(),
                     actual.getLat(), actual.getLng());
             distanciaTotal += distancia;
 
-            // Tiempo
             long segundos = ChronoUnit.SECONDS.between(anterior.getTimestamp(), actual.getTimestamp());
             if (actual.getVelocidad() != null && actual.getVelocidad() > 1.0) {
                 tiempoMovimiento += segundos;
@@ -667,7 +595,6 @@ public class TrackingBl {
                 tiempoDetenido += segundos;
             }
 
-            // Velocidad máxima
             if (actual.getVelocidad() != null && actual.getVelocidad() > velocidadMaxima) {
                 velocidadMaxima = actual.getVelocidad();
             }
@@ -684,9 +611,6 @@ public class TrackingBl {
         }
     }
 
-    /**
-     * Actualiza el estado de conexión basado en última sincronización
-     */
     private void actualizarEstadoConexion(TrackingUbicacion tracking) {
         if (tracking.getUltimaSincronizacion() == null) {
             return;
@@ -702,9 +626,6 @@ public class TrackingBl {
         }
     }
 
-    /**
-     * Determina qué acción se requiere según el estado de geofencing
-     */
     private String determinarAccionRequerida(GeofencingStatusDto geofencing) {
         if (geofencing.getPuedeRegistrarLlegada()) {
             return "registrar_llegada";
@@ -717,8 +638,6 @@ public class TrackingBl {
         }
         return null;
     }
-
-    // ==================== CONVERSIONES ====================
 
     private TrackingResponseDto convertToResponseDto(TrackingUbicacion tracking) {
         GeofencingStatusDto geofencing = null;
@@ -790,7 +709,7 @@ public class TrackingBl {
                 .velocidadMaxima(metricas.getVelocidadMaxima())
                 .inicioViaje(metricas.getInicioViaje())
                 .finViaje(metricas.getFinViaje())
-                .tiempoTranscurrido(geoUtils.formatearDuracion(tiempoTotal))
+                .tiempoTranscurrido(GeometryUtils.formatearDuracion(tiempoTotal))
                 .build();
     }
 
@@ -812,11 +731,10 @@ public class TrackingBl {
                     .build());
         }
 
-        // Próximo punto
         TrackingUbicacion.PuntoControl proximoPunto =
-                geoUtils.encontrarProximoPuntoControlPendiente(tracking.getPuntosControl());
+                GeometryUtils.encontrarProximoPuntoControlPendiente(tracking.getPuntosControl());
         if (proximoPunto != null && tracking.getUbicacionActual() != null) {
-            double distancia = geoUtils.calcularDistanciaMetros(
+            double distancia = GeometryUtils.calcularDistanciaMetros(
                     tracking.getUbicacionActual().getLat(),
                     tracking.getUbicacionActual().getLng(),
                     proximoPunto.getLat(),
@@ -827,8 +745,8 @@ public class TrackingBl {
 
             double velocidad = tracking.getUbicacionActual().getVelocidad() != null
                     ? tracking.getUbicacionActual().getVelocidad() : 30.0;
-            long tiempoEstimado = geoUtils.calcularTiempoEstimadoLlegada(distancia / 1000, velocidad);
-            builder.tiempoEstimadoLlegada(geoUtils.formatearDuracion(tiempoEstimado));
+            long tiempoEstimado = GeometryUtils.calcularTiempoEstimadoLlegada(distancia / 1000, velocidad);
+            builder.tiempoEstimadoLlegada(GeometryUtils.formatearDuracion(tiempoEstimado));
         }
 
         return builder.build();
@@ -845,8 +763,8 @@ public class TrackingBl {
                 .collect(Collectors.toList());
 
         return RutaResumenDto.builder()
-                .puntoInicio(ubicaciones.get(0))
-                .puntoFin(ubicaciones.get(ubicaciones.size() - 1))
+                .puntoInicio(ubicaciones.getFirst())
+                .puntoFin(ubicaciones.getLast())
                 .distanciaTotal(tracking.getMetricas().getDistanciaRecorrida())
                 .duracionTotal(tracking.getMetricas().getTiempoEnMovimiento() + tracking.getMetricas().getTiempoDetenido())
                 .puntosVisitados(puntosVisitados)
